<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WebImageViewer</string>
    <string name="crawl">開始爬取</string>
    <string name="enter_url">輸入網址</string>
    <string name="filter_pattern">過濾規則</string>
    <string name="loading">載入中…</string>
    <string name="error_network">無法連線，請檢查網路設定後重試</string>
    <string name="error_invalid_url">網址格式不正確</string>
    <string name="error_empty_result">找不到符合條件的連結</string>
    <string name="error_download">下載失敗，請稍後重試</string>
    <string name="error_extraction">解壓縮失敗</string>
    <string name="error_storage">儲存空間不足</string>
    <string name="error_general">發生錯誤，請重試</string>
    <string name="retry">重試</string>
    <string name="download_zip">下載 ZIP</string>
    <string name="view_zip">檢視 ZIP</string>
    <string name="downloading">下載中…</string>
    <string name="extracting">解壓縮中…</string>
    <string name="download_complete">下載完成</string>
    <string name="no_links_found">找不到任何連結</string>
    <string name="no_images_found">找不到任何圖片</string>
    <string name="no_media_found">找不到任何媒體檔案</string>
    <string name="browse_indices">瀏覽索引頁面</string>
    <string name="default_filter_pattern">.*</string>
    <string name="permission_required">需要儲存空間權限</string>
    <string name="permission_denied">權限被拒絕，無法下載檔案</string>
    <string name="menu_crawl">爬取指定網頁</string>
    <string name="menu_browse">觀看網頁圖片</string>
    <string name="menu_select_index">選取網頁列表</string>
    <string name="menu_load_zip">載入壓縮檔</string>
    <string name="select_folder">選擇資料夾</string>
    <string name="download_rule">下載規則</string>
    <string name="menu_settings">系統設定</string>
    <string name="settings_lock_title">密碼鎖</string>
    <string name="settings_lock_confirm_title">確認密碼</string>
    <string name="settings_lock_prompt">請輸入 4 位數密碼</string>
    <string name="settings_lock_confirm_prompt">請再次輸入密碼以確認</string>
    <string name="settings_lock_mismatch">密碼不一致，請重新設定</string>
    <string name="settings_lock_success">密碼設定成功</string>
    <string name="lock_screen_title">請輸入密碼進入</string>
    <string name="lock_error_wrong_pin">密碼錯誤，程式將關閉</string>
    <string name="no_indices_found">尚無爬取過的網頁</string>
    <string name="delete_index_confirm_title">確認刪除</string>
    <string name="delete_index_confirm_message">確定要刪除此網頁及所有相關內容與檔案嗎？</string>
    <string name="action_display">顯示</string>
    <string name="action_delete">刪除</string>
    <string name="cancel">取消</string>

    <string name="settings_backup_title">資料備份</string>
    <string name="settings_restore_title">資料還原</string>
    <string name="backup_success">備份成功</string>
    <string name="restore_success">還原成功，請重新啟動應用程式</string>
    <string name="backup_failed">備份失敗</string>
    <string name="restore_failed">還原失敗</string>

    <string name="action_edit">編輯</string>
    <string name="action_delete_all">全部刪除</string>
</resources>
