<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cancel_edit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/cancel"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_selected"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_delete_all"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
