<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.eddy.webcrawler.ui.fragment.MainFragment"
        android:label="@string/menu_crawl"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_browseFragment"
            app:destination="@id/browseFragment" />
    </fragment>

    <fragment
        android:id="@+id/browseFragment"
        android:name="com.eddy.webcrawler.ui.fragment.BrowseFragment"
        android:label="@string/menu_browse"
        tools:layout="@layout/fragment_browse">
        <argument
            android:name="linkIndexId"
            app:argType="long"
            android:defaultValue="0L" />
        <action
            android:id="@+id/action_browseFragment_to_zipViewerFragment"
            app:destination="@id/zipViewerFragment" />
    </fragment>

    <fragment
        android:id="@+id/selectIndexFragment"
        android:name="com.eddy.webcrawler.ui.fragment.SelectIndexFragment"
        android:label="@string/menu_select_index"
        tools:layout="@layout/fragment_select_index">
        <action
            android:id="@+id/action_selectIndexFragment_to_browseFragment"
            app:destination="@id/browseFragment" />
    </fragment>

    <fragment
        android:id="@+id/zipViewerFragment"
        android:name="com.eddy.webcrawler.ui.fragment.ZipViewerFragment"
        android:label="@string/menu_load_zip"
        tools:layout="@layout/fragment_zip_viewer">
        <argument
            android:name="localPath"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.eddy.webcrawler.ui.fragment.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
