<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_lock_title"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBackup"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/settings_backup_title"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRestore"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/settings_restore_title"
        android:textSize="18sp" />

</LinearLayout>
